# fearless-ferns

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt
__marimo__/: editor.html
project/: main.py
src/editor/: editor.py
src/editor/layouts/: editor.grid.json
src/project/: __init__.py  _examples.py  editor.py  editor.vue  emoji_keyboard.py  homepage.py  index.py  interpretor.py  main.py  storage_secret.py
src/project/components/: editor.vue  extended_editor.vue  updated_mermaid.js
src/project/interpreter/: __init__.py  cleanup.py  interpret.py  models.py  nlp.py  parse.py  tokenizer.py
src/project/models/: Emojis.py
src/project/pages/: _examples.py  editor.py  homepage.py  how_to_use.py
src/project/widgets/: emoji_keyboard.py
