[project]
# This section contains metadata about your project.
name = "fearless-ferns"
description = "An Emoji Flowchar Builder"
authors = [
    { name = "Minhaz" },
    { name = "Saad" },
    { name = "NaviTheCoderboi" },
    { name = "Apoorv" },
    { name = "Rabbiya" },
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Here are all the dependencies that were used directly by this project
    "nicegui~=2.22",
    "html2text~=2025.4",
    "emoji~=2.14",
    # A list of all the pinned dependencies is provided in `requirements.txt` file
]

[dependency-groups]
# This `dev` group contains all the development requirements for our linting toolchain.
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
]

[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
line-length = 119
# Target Python 3.12.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# The directory containing the source code.
src = ["src"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
]
